--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hola</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div class="boxes">1</div>
+        <div class="boxes">2</div>
+        <div class="boxes">3</div>
+        <div class="boxes">4</div>
+        <div class="boxes">4</div>
+        <div class="boxes">4</div>
+        <div class="boxes">4</div>
+        <div class="boxes">4</div>
+        <div class="boxes">4</div>
+    </div>
 </body>
 </html>
